# acapy

./: .codecov.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .tgitconfig  0.12.0rc1  0.7.4-rc3.md  ACA-Py-OWF-Project-Mapping.md  AdminAPI.md  AnonCredsWalletType.md  AnoncredsProofValidation.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ContainerImagesAndGithubActions.md  DIDMethods.md  DIDResolution.md  Databases.md  DevReadMe.md  Endorser.md  GOVERNANCE.md  IndySDKtoAskarMigration.md  JsonLdCredentials.md  LICENSE  LTS-Strategy.md  Logging.md  MAINTAINERS.md  MANIFEST.in  Managing-ACA-Py-Doc-Site.md  Mediation.md  Multicredentials.md  Multiledger.md  Multitenancy.md  NOTICES  OutboundQueue.md  PUBLISHING.md  (+33 more)
.circleci/: config.yaml  config.yml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/: LTS-README.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  lts-versions.txt  pull_request_template.md  pull_request_template.mdy
.vscode-sample/: alice.yml  author.yml  endorser.yml  faber.yml  launch.json  multitenant-admin.yml  multitenant.yml  settings.json
0.11.0/: 404.html  index.html
0.11.1/: 404.html  index.html
0.11.2/: 404.html  index.html
0.11.3/: 404.html  index.html
0.12.0/: 404.html  index.html
0.12.0rc2/: 404.html  index.html
0.12.0rc3/: 404.html  index.html
0.12.1/: 404.html  index.html
0.12.1rc1/: 404.html  index.html
0.12.2/: 404.html  index.html
0.12.2rc1/: 404.html  index.html
0.12.3/: 404.html  conf.py  index.html
0.12.4/: 404.html  index.html
0.12.6/: 404.html  index.html
1.0.0/: 404.html  index.html
1.0.0rc5/: 404.html  index.html
1.0.0rc6/: 404.html  conf.py  index.html  requirements.txt
1.0.1/: 404.html  index.html
1.1.0/: 404.html  index.html
1.1.0rc1/: 404.html  index.html
1.2.0/: 404.html  index.html
1.2.1/: 404.html  index.html
1.2.2/: 404.html  index.html
1.2.3/: 404.html  index.html  index.rst
1.2.4/: 404.html  index.html
1.2.7/: 404.html  index.html  requirements.txt
1.3.0/: 404.html  index.html  index.rst
1.3.0rc0/: 404.html  index.html
1.3.0rc2/: 404.html  index.html
1.3.1/: 404.html  index.html
1.3.2/: 404.html  index.html  readthedocs.yaml
1.3.4/: 404.html  index.html
1.4.0/: 404.html  index.html  requirements.txt
1.5.0/: 404.html  index.html  mkdocs-dockerfile.yml
1.5.1/: 404.html  index.html
1.6.0/: 404.html  index.html  requirements.txt
GettingStartedAriesDev/: AriesAgentArchitecture.md  AriesDeveloperDemos.md  DecentralizedIdentityDemos.md
acapy_agent/: __main__.py  version.py
agent/: .coveragerc  .gitignore  README.md  config.yaml  docker.sh  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
agent-driver/: README.md
aries_cloudagent/: __init__.py  __main__.py  classloader.py  conductor.py  defaults.py  delivery_queue.py  dispatcher.py  error.py  postgres.py  stats.py  task_processor.py  version.py
clients/: README.md
configs/: agency.yaml  external-mediator.yml  external.yaml  holder.yaml  mediator.yaml
credential-registry/: README.md
delivery_service/: PersistantMessageQueue.md  create_topic  docker-compose.inbound.yml  docker-compose.outbound.yml  run_delivery_service
demo/: .gitignore  AcmeDemoWorkshop.md  AgentTracing.md  AliceGetsAPhone.md  AliceWantsAJsonCredential.md  AriesOpenAPIDemo-DMV.md  AriesOpenAPIDemo-mobile.md  AriesOpenAPIDemo.md  AriesPostmanDemo.md  DemoMacOSRunLocalTLDR.md  Endorser.md  INTEGRATION-TESTS.md  README-multitenant.md  README.md  README_web.md  ZeroToHeroUsingTheBasis.md  __init__.py  acme.py  agent.py  agent.sh  alice-local.sh  alice-pg.py  alice.py  askar-indy-args.yml  behave.ini  demo-args.cfg  demo-args.yaml  demo_utils.py  faber-local.sh  faber-pg.py  faber.py  faber_run.py  faberfix.py  local-indy-args.cfg  local-indy-args.yaml  multi-indy-args.yaml  multi_ledger_config.yml  multi_ledger_config_bdd.yml  ngrok-wait.sh  performance.py  (+6 more)
demo/playground/examples/: Dockerfile.test.runner  docker-compose.yml  pyproject.toml
demo/playground/examples/tests/: __init__.py  test_mediator_ping_agents.py  test_ping_agents.py
docker/: Dockerfile  Dockerfile.anoncreds-test  Dockerfile.bdd  Dockerfile.demo  Dockerfile.globalid  Dockerfile.indy  Dockerfile.indy-base  Dockerfile.run  Dockerfile.sleep  Dockerfile.test  Dockerfile.test-indy  Makefile  docker-compose.demo.yml  manage
docs/: ACA-Py-OWF-Project-Mapping.md  AdminAPI.md  Databases.md  DeploymentModel.md  DevReadMe.md  Endorser.md  JsonLdCredentials.md  LTS-Strategy.md  Mediation.md  Multiledger.md  Multitenancy.md  Poetry.md  README.md  SupportedRFCs.md  Troubleshooting.md  UpdateRTD.md  (+125 more)
docs-v0.12.0rc1/: 404.html  index.html
scenarios/: Dockerfile  README.md  conftest.py  pyproject.toml
scenarios/examples/: util.py
scenarios/examples/anoncreds_issuance_and_revocation/: docker-compose.yml  example.py
scenarios/examples/clustered/: docker-compose.yml  example.py  nginx.conf
scenarios/examples/connectionless/: docker-compose.yml  example.py
scenarios/examples/did_indy_issuance_and_revocation/: docker-compose.yml  example.py
scenarios/examples/json_ld/: docker-compose.yml  example.py
scenarios/examples/kanon_issuance_and_presentation/: docker-compose.yml  example.py
scenarios/examples/mediation/: docker-compose.yml  example.py
scenarios/examples/multitenancy/: docker-compose.yml  example.py
scenarios/examples/multiuse_invitations/: docker-compose.yml  example.py
scenarios/examples/oauth_resource_server/: README.md  docker-compose.yml  example.py
scenarios/examples/oauth_resource_server/keycloak/: realm-export.json
scenarios/examples/presenting_revoked_credential/: docker-compose.yml  example.py
scenarios/examples/restart_anoncreds_upgrade/: docker-compose.yml  example.py
scenarios/examples/self_attested/: docker-compose.yml  example.py
scenarios/examples/simple/: docker-compose.yml  example.py
scenarios/examples/simple_restart/: docker-compose.yml  example.py
scenarios/examples/vc_holder/: docker-compose.yml  example.py
(+7879 files in other folders)
