[tool.poetry]
name = "scenarios"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
acapy-controller = {git = "https://github.com/indicio-tech/acapy-minimal-example.git", rev = "main"}
docker = "7.1.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.26.0"
pydantic = "^2.11.3"

[tool.pytest.ini_options]
markers = "examples: test the examples"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
