[project]
name = "scenarios"
version = "0.1.0"
description = "ACA-Py scenario integration tests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docker>=7.1.0,<8.0.0",
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=0.26.0,<1.0.0",
    "pydantic>=2.12.2,<3.0.0",
    "acapy-controller @ git+https://github.com/openwallet-foundation/acapy-minimal-example.git@main",
]

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
markers = "examples: test the examples"
