[tool.poetry]
name = "acapy_demos_playground"
version = "0.1.0"
description = ""
authors = ["Jason Sherman <tools@usingtechnolo.gy>"]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.7"
asynctest = "^0.13.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"