[tool.poetry]
name = "acapy_demos_playground"
version = "0.1.0"
description = ""
authors = ["Jason Sherman <tools@usingtechnolo.gy>"]
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pytest-asyncio = "^0.26.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"